added navbar items

--- a/index.html
+++ b/index.html
@@ -9,13 +9,29 @@
 </head>
 <body>
 <div class="container">
-<nav> Links</nav>
-<div>Content</div>
-<div>Some Random information</div>
-<div>Pictures </div>
-<div>QUote</div>
-<div>call to action</div>
-<div>footer</div>
+    <!-- Navbar -->
+
+    <nav class="nav-bar">
+        <div class="logo">
+            <img src="garf.png" height=auto width="100">
+        </div> 
+         
+        <div class="nav-bar-links">
+            <a href="#">Garfology</a>
+            <a href="#">Vet</a>
+            <a href="#">Lasagne</a>
+        </div>
+    </nav>
+<!-- Hero -->
+
+    <div class="hero">Content</div>
+
+
+    <div>Some Random information</div>
+    <div>Pictures </div>
+    <div>QUote</div>
+    <div>call to action</div>
+    <div>footer</div>
 
 
 </div>
