add text and picture

--- a/index.html
+++ b/index.html
@@ -24,7 +24,17 @@
     </nav>
 <!-- Hero -->
 
-    <div class="hero">Content</div>
+    <div class="hero">
+        <div class="hero-left">
+            <div class="hero-left-items hero-title">Long live Garfield</div>
+            <div class="hero-left-items">To be fair, you have to have a very high IQ to understand Garfield comics. The humor is extremely subtle, and without a solid grasp of theoretical physics most of the jokes will go over a typical viewer’s head. </div>
+            <button class="button">Sign up</button>
+        </div>
+        <div>
+            <img src="garf1.png" height= auto width="300">
+        </div>
+
+    </div>
 
 
     <div>Some Random information</div>
