new file:   garf-mage.png 	new file:   garf-necro.png 	new file:   garf-priest.png 	new file:   garf-warr.png 	modified:   index.html 	modified:   styles.css

--- a/index.html
+++ b/index.html
@@ -29,16 +29,28 @@
             <div class="hero-left-items hero-title">Long live Garfield</div>
             <div class="hero-left-items">To be fair, you have to have a very high IQ to understand Garfield comics. The humor is extremely subtle, and without a solid grasp of theoretical physics most of the jokes will go over a typical viewer’s head. </div>
             <button class="button">Sign up</button>
-        </div>
+            </div>
         <div>
             <img src="garf1.png" height= auto width="300">
         </div>
 
     </div>
+<!-- Random info -->
 
+    <div class="info-box">You are not immune to propaganda</div>
 
-    <div>Some Random information</div>
-    <div>Pictures </div>
+<!-- Galleria -->
+    <div class="gallery-picture">
+        <div class="gitext"><div class="picture-item"><img src="garf-mage.png" ></div>
+        <div class="picture-item2">Mage Garfield</div> </div>
+        <div class="gitext"><div class="picture-item"><img src="garf-warr.png"> </div>
+        <div class="picture-item2">Warrior Garfield</div> </div>
+        <div class="gitext"><div class="picture-item"><img src="garf-priest.png"> </div>
+        <div class="picture-item2">Priest Garfield</div> </div>
+        <div class="gitext"><div class="picture-item"><img src="garf-necro.png"> </div>
+        <div class="picture-item2">Necromancer Garfield</div> </div>
+    </div>
+
     <div>QUote</div>
     <div>call to action</div>
     <div>footer</div>
