modified:   index.html 	modified:   styles.css

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="gitext"><div class="picture-item"><img src="garf-necro.png"> </div>
         <div class="picture-item2">Necromancer Garfield</div> </div>
     </div>
-
+<!-- sad-->
     <div>QUote</div>
     <div>call to action</div>
     <div>footer</div>
