modified:   index.html 	modified:   styles.css

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="picture-item2">Necromancer Garfield</div> </div>
     </div>
 <!-- sad-->
-    <div>QUote</div>
+    <div class="qoute">QUote</div>
     <div>call to action</div>
     <div>footer</div>
 
