modified:   index.html 	modified:   styles.css

--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
         <div class="picture-item2">Necromancer Garfield</div> </div>
     </div>
 <!-- sad-->
-    <div class="qoute">QUote</div>
+    <div class="quote">"Take me down to Lasagna City, where the Mondays are never and the Garfs are pretty."
+        </div>
+    <div class="quote-source">-- Garfxl Rose
+        </div>
     <div>call to action</div>
     <div>footer</div>
 
