--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         <div class="picture-item2">Necromancer Garfield</div> </div>
     </div>
 <!-- sad-->
+<!-- sad-->
     <div class="quote">"Take me down to Lasagna City, where the Mondays are never and the Garfs are pretty."
         </div>
     <div class="quote-source">-- Garfxl Rose
