--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <nav class="nav-bar">
         <div class="logo">
-            <img src="../images/garf.png" height=auto width="100">
+            <img src="images/garf.png" height=auto width="100">
         </div> 
          
         <div class="nav-bar-links">
@@ -31,7 +31,7 @@
             <button class="button">Sign up</button>
             </div>
         <div>
-            <img src="../images/garf1.png" height= auto width="300">
+            <img src="images/garf1.png" height= auto width="300">
         </div>
 
     </div>
@@ -41,13 +41,13 @@
 
 <!-- Galleria -->
     <div class="gallery-picture">
-        <div class="gitext"><div class="picture-item"><img src="../images/garf-mage.png" ></div>
+        <div class="gitext"><div class="picture-item"><img src="images/garf-mage.png" ></div>
         <div class="picture-item2">Mage Garfield</div> </div>
-        <div class="gitext"><div class="picture-item"><img src="../images/garf-warr.png"> </div>
+        <div class="gitext"><div class="picture-item"><img src="images/garf-warr.png"> </div>
         <div class="picture-item2">Warrior Garfield</div> </div>
-        <div class="gitext"><div class="picture-item"><img src="../images/garf-priest.png"> </div>
+        <div class="gitext"><div class="picture-item"><img src="images/garf-priest.png"> </div>
         <div class="picture-item2">Priest Garfield</div> </div>
-        <div class="gitext"><div class="picture-item"><img src="../images/garf-necro.png"> </div>
+        <div class="gitext"><div class="picture-item"><img src="images/garf-necro.png"> </div>
         <div class="picture-item2">Necromancer Garfield</div> </div>
     </div>
 <!-- sad-->
